# recrutamento-23-24

python/: python.pnantes.hfona.py
python/AlexandreDelgado/: README.md  preinstall_tasklist.py  setup.sh
python/André Cardoso/: Documentação.txt  Projeto_python_André_Cardoso.py
python/André Caseiro/: Cargo.toml  README.md
python/André Caseiro/src/: lib.rs  main.rs
python/André Santos/: INSTRUCOES.md  projeto_python.py
python/Catarina Silva/: INSTRUÇÕES.md  task_manager.py
python/Diogo Neves/: README.md  taskList.py
python/Eduardo Casanova/: Documentation.md  TaskList.py
python/Felipe Sancho/: CAP.py  events.py  main.py
python/Gonçalo Martins/: main.py
python/HenriqueDelfino/: README.md  main.py
python/João Valente/: TaskList_project.md  TaskList_project.py
python/Rafael Garcia/: README.md  main.py
python/Rafael Garcia/app/Menus/: CommandPrompts.py  EditMenu.py  OpenMenu.py  TaskMenu.py
python/Rafael Garcia/app/Menus/Commands/: CreateTask.py  EditTask.py  ListTask.py  RemoveTask.py  RenameTask.py  TaskCommands.py
python/Rafael Garcia/app/Menus/Commands/FieldPrompts/: FieldPrompts.py
python/Rafael Garcia/core/: Taskmsys.py
python/Rafael Garcia/core/Tasks/: Task.py  TaskDecoder.py  TaskEnconder.py
python/Rafael Garcia/lib/: Menu.py
python/Rafael Garcia/lib/Commands/: Command.py
python/Rafael Garcia/lib/Commands/Forms/: Form.py
python/Rafael Garcia/libIO/: MenuOpener.py
python/Rafael Garcia/libIO/FormIO/: FormFill.py
python/Rafael Garcia/libIO/FormIO/FieldIO/: FieldFill.py
(+8 files in other folders)
