[package]
name = "task_manager"
version = "0.1.0"
authors = ["André Caseiro"]
edition = "2021"
description = "A task manager CLI application."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["cargo"] }
